[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "meshagent-agents"
dynamic = ["version", "readme"]
description = "Agent Building Blocks for Meshagent"
requires-python = ">=3.13"
license = "Apache-2.0"
classifiers = []
keywords = []
dependencies = [
  "strictyaml==1.7.3",
  "aiofiles~=24.1",
  "pyjwt~=2.10",
  "pytest~=8.4",
  "pytest-asyncio~=0.26",
  "aiosmtplib~=4.0.1",
  "meshagent-api==0.47.0",
  "meshagent-tools==0.47.0",
  "meshagent-openai==0.47.0",
  "pydantic~=2.11",
  "msgpack~=1.1",
  "opentelemetry-distro~=0.59b0",
  "mistune~=3.1.4",
  "pathspec>=1.0.3,<2",
]

[project.scripts]
meshagent-channel-chat = "meshagent.agents.channel_process:chat_main"
meshagent-channel-mail = "meshagent.agents.channel_process:mail_main"
meshagent-channel-queue = "meshagent.agents.channel_process:queue_main"
meshagent-channel-toolkit = "meshagent.agents.channel_process:toolkit_main"

[project.optional-dependencies]
test = [
    "hypothesis==6.156.4",
]

all = [
    "meshagent-api[all]==0.47.0",
    "chonkie~=0.5.1",
    "chonkie[semantic]~=0.5.1",
    "chonkie[openai]~=0.5.1"
]

sync = [
    "meshagent-api[sync]==0.47.0",
]

mail = []

rag = [
    "chonkie~=0.5.1",
    "chonkie[semantic]~=0.5.1",
    "chonkie[openai]~=0.5.1"
]

[project.urls]
Documentation = "https://docs.meshagent.com"
Website = "https://www.meshagent.com"
Source = "https://www.meshagent.com"

[tool.setuptools.packages.find]
include = ["meshagent.*"]

[tool.setuptools.package-data]
"meshagent.agents" = ["py.typed", "*.pyi", "**/*.pyi", "**/*.js"]

[tool.setuptools.dynamic]
version = {attr = "meshagent.agents.version.__version__"}
readme = { file = "README.md", content-type = "text/markdown" }
